[package]
name = "perfect_rand"
version = "0.3.0"
edition = "2021"
description = "A cipher for randomizing numbers in an arbitrary range."
license = "Unlicense"
repository = "https://github.com/mat-1/perfect_rand"
keywords = ["blackrock", "cipher"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[dev-dependencies]
ntest = "0.9.0"
divan = "0.1.14"

[[bench]]
name = "benchmark"
harness = false
